--- a/main/css/style.css
+++ b/main/css/style.css
@@ -303,13 +303,11 @@ button:focus {
             color: black;
               
          }
-
 /* ---------------- aboutPage ------------------  */
 #about-div {
           position: absolute;
             top: 0;
             left: 0;
-            background-image: url(https://static.pexels.com/photos/37728/pexels-photo-37728.jpeg);
             background-size: cover;
             background-repeat: no-repeat;
             width: 100%;
@@ -319,7 +317,7 @@ button:focus {
         }
 
 #main_img2{
-width: 300px; 
+    width: 300px; 
     float: right; 
     opacity: 0.7;
     margin-right: 25%; 
@@ -341,8 +339,12 @@ width: 300px;
   text-align: center; 
     font-size: 45pt;
     font-family: MontserratRegular;
-   
+    margin-top: 100px;
+    bottom: 20%;
     
+    width: 980px;
+    height: 100px;
+    position: absolute;
 }
 .text_left {
     font-family: MontserratRegular;
@@ -370,8 +372,10 @@ width: 300px;
             
             position: absolute;
             top: 0;
-            left: 0; 
-            width: 100%;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: 980px;
             height: 100%;
             animation: fade 1s;
     
@@ -426,12 +430,10 @@ position: absolute;
 #footerDivText{
     position: absolute; 
     height: 49%;
-    width: 100%;
+    width: 900F;
     background-color: rgba(230, 230, 230, 1);
-    border-width: 3px;
-    border-style: dotted;
-    border-color: rgba(100, 100, 100, 0.4); 
     margin-top: 20px; 
+    padding: 50px;
     
 }
 /* ---------------- aboutPage ------------------  */
@@ -451,7 +453,7 @@ position: absolute;
     position: absolute; 
           text-align: left;
           font-size: 20pt; 
-          background-color: rgba(210, 210, 210, 0.5);
+          background-color: rgba(210, 210, 210, 0.7);
           padding-left: 15px;
           padding-right: 15px;
           padding-top: 35px;
@@ -459,7 +461,7 @@ position: absolute;
           width: 97%;
           height: 88%;
           margin-top: 10px;
-    margin-bottom: 10px;
+        margin-bottom: 10px;
           -moz-border-radius: 7px;
           -webkit-border-radius: 7px;
             font-family: MyriadPro;
@@ -475,6 +477,35 @@ position: absolute;
             animation: fade 1s;
     
         }
+
+
+/* ---------------- header1 --------------------  */ 
+              
+              
+      .header1{ 
+        
+            position: absolute;
+            top: 15%;
+            left: 0;
+            background-color: white;
+            width: 100%;
+            height: 3%;
+        }        
+       
+       .header1_h1{
+           font-family:MyriadPro;  
+           position: absolute;
+            color: #666686;
+            width: 80%;
+            height: 40%;
+            top:0;
+            left: 5%;
+            bottom: 0;
+            text-align: left;
+            font-size: 50px;
+            margin: auto;       
+        }
+
 
 
 /* ---------------- header1 --------------------  */ 
@@ -540,7 +571,7 @@ position: absolute;
   background-color: gainsboro;
   -webkit-transition: .4s;
   transition: .4s;
-   background-image: url(../img/wearIcon/FIcon.png);
+   background-image: url(../img/wearIcon/MIcon.png);  
     background-size: cover;
     background-repeat: no-repeat  
 }
@@ -560,7 +591,7 @@ input:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
-       background-image: url(../img/wearIcon/MIcon.png);
+       background-image: url(../img/wearIcon/FIcon.png); 
     background-size: cover;
     background-repeat: no-repeat 
 }
@@ -811,7 +842,19 @@ input:checked + .slider:before {
             height: 16%;
            display: none;  
         }
-              
+
+/* ---------------- checkFuture --------------------  */
+
+ #checkFuture{
+           position: absolute;
+           background-color:#ebebeb; 
+           top:18%;
+           width: 100%;
+           height: 16%;
+           display: none;  
+        }
+
+
  /* ---------------- header2 --------------------  */             
 
 .header2{ 
@@ -829,7 +872,7 @@ input:checked + .slider:before {
               
     .header2_buts{
             position: absolute;
-            width: 60%;
+            width: 90%;
             height: 12%;
             left: 5%;
             top: 5%;
@@ -841,7 +884,7 @@ input:checked + .slider:before {
             position: absolute;
             left: 0px;
             top: 0px;
-            width: 30%;
+            width: 22%;
             height: 100%;
             background-color: #3b455f;
             
@@ -855,11 +898,11 @@ input:checked + .slider:before {
         .wearBut{
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+            right: 26%;
             left: 0px;
             top: 0px;
             margin: auto;
-            width: 30%;
+            width: 22%;
             height: 100%;
             background-color: #3b455f;
              color: #ebebeb;
@@ -872,9 +915,9 @@ input:checked + .slider:before {
         .travelBut{
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+            right: 26%;
             top: 0px;
-            width: 30%;
+            width: 22%;
             height: 100%;
             background-color: #3b455f;
             color: #ebebeb;
@@ -884,12 +927,29 @@ input:checked + .slider:before {
             text-align: center;
             z-index: 2;
         }
+.futureBut{
+            font-family: MontserratRegular;
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            width: 22%;
+            height: 100%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+            
+}
         .weatherBut_clicked{
+       
             font-family: MontserratRegular; 
             position: absolute;
             left: 0px;
             top: 0px;
-            width: 30%;
+            width: 22%;
             margin-top: -20px; 
             height: 140%;
             background-color: #ebebeb;
@@ -900,15 +960,34 @@ input:checked + .slider:before {
             cursor: pointer;
             text-align: center;
             z-index: 2;
+
         }
         .wearBut_clicked{
+
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+            right: 26%;
             left: 0px;
             top: 0px;
             margin: auto;
-            width: 30%;
+            width: 22%;
+            margin-top: -20px; 
+            height: 140%;
+            background-color: #ebebeb;
+             color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+
+        }
+        .travelBut_clicked{
+            font-family: MontserratRegular;
+            position: absolute;
+           right: 26%;
+            top: 0px;
+            width: 22%;
             margin-top: -20px; 
             height: 140%;
             background-color: #ebebeb;
@@ -919,12 +998,12 @@ input:checked + .slider:before {
             text-align: center;
             z-index: 2;
         }
-        .travelBut_clicked{
+       .futureBut_clicked{
             font-family: MontserratRegular;
             position: absolute;
-            right: 0px;
+           right: 0px;
             top: 0px;
-            width: 30%;
+            width: 22%;
             margin-top: -20px; 
             height: 140%;
             background-color: #ebebeb;
@@ -954,6 +1033,12 @@ input:checked + .slider:before {
             margin-top: -20px; 
             height: 142%;  
         }    
+          .futureBut:hover {
+            background-color: #ebebeb;
+            color: black;
+            margin-top: -20px; 
+            height: 142%;  
+        }  
         
     /* ---------------- header2 --------------------  */       
         .header2_footer{
@@ -1765,5 +1850,480 @@ input:checked + .slider:before {
 }
 }
 
+/*        temperDiv_Future     */
+
+#temperDiv_Future{
+            position: absolute;
+            right: 20%;
+            top: 10%;
+           
+            margin: auto;
+            width: 60%;
+            height: 80%; 
+}
+
+ #temperDiv1_Future{
+           position: absolute;
+           top:0;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;  
+        }
+          #temperDiv2_Future{
+           position: absolute;
+           top:15%;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;
+        }
+          #temperDiv3_Future{
+           position: absolute;
+           top:30%;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;
+        }
+          #temperDiv4_Future{
+           position: absolute;
+           top:45%;
+           width: 100%;
+           height: 15%;
+           border-bottom: 5px solid #000;  
+        }
+          #temperDiv5_Future{
+           position: absolute;
+           top:65%;
+           width: 100%;
+           height: 35%;
+/*           border-bottom: 6px solid #000;  */
+        }
+        .temperP_Future{
+            position: absolute;
+            bottom:-10px;
+            font-size: 20px;
+            font-family: RobotoThin;
+            font-weight: bold;
+        }
+.temperNum_Future{
+            position: absolute;
+            bottom:-10px;
+            font-size: 20px;;
+            right: 15px;
+            right: 15px;
+            font-family: MontserratRegular;
+        }
+
+ #wearDiv1_Future{
+           position: absolute;
+           top:20%;
+           width: 120px;
+           height:100px;
+      
+        }
+          #wearDiv2_Future{
+           position: absolute;
+           top:20%;
+           width: 20%;
+           height:100px;
+            left: 20%;    
+        
+        }
+          #wearDiv3_Future{
+           position: absolute;
+           top:20%;
+            width: 20%;
+           height:100px;
+            left: 40%;     
+          
+        
+        }
+          #wearDiv4_Future{
+            position: absolute;
+           top:20%;
+            width: 20%;
+           height:100px;
+            left: 60%; 
+         
+        }
+          #wearDiv5_Future{
+            position: absolute;
+           top:20%;
+            width: 20%;
+           height:100px;
+            left: 80%; 
+        }
+
+
+.wearP_Future{
+            font-family: RobotoThin;
+            font-weight: bold;
+            position: absolute;
+            bottom:0;
+            font-size: 20px;
+            left:0;
+            right: 0;
+            margin: auto;
+            width: 110px;
+            height: 30px;
+            text-align: center;
+        }
+.wearicon_Future
+        {
+            position: absolute;
+            background-image: url("");
+            background-size: 50px;
+            background-repeat: no-repeat;
+            width: 50px;
+            height: 50px;
+            top:0;
+            left:0;
+            right: 0;
+            margin: auto;
+            -webkit-transition-duration:0.1s;
+        }
+
+.wearicon_Future:hover{
+           transform:scale(1.2);
+           }
+
+ #outwearIcon_Future{
+           background-image: url("../img/wearIcon/accessories.png");  
+        } 
+        #shirtIcon_Future{
+             background-image: url("../img/wearIcon/shirt-man.png");
+        }  
+        #pantsIcon_Future{
+             background-image: url("../img/wearIcon/pants.png");
+        }  
+        #shoesIcon_Future{
+             background-image: url("../img/wearIcon/shoes-man.png");
+        }  
+        #accessoriesIcon_Future{
+             background-image: url("../img/wearIcon/umbrella.png");
+        } 
+
+.switch2 {
+  position: absolute;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  z-index: 1;
+  right: 0;
+    left: 0;
+    margin: auto;
+  bottom: 20px;    
+    
+}
+
+.switch2 input {display:none;}
+
+.slider2 {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  -webkit-transition: .4s;
+  transition: .4s;
+ 
+}
+
+.slider2:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: gainsboro;
+  -webkit-transition: .4s;
+  transition: .4s;
+   background-image: url(../img/wearIcon/MIcon.png);  
+    background-size: cover;
+    background-repeat: no-repeat  
+}
+
+
+
+input:checked + .slider2 {
+  background-color: white;
+   
+}
+
+input:focus + .slider2 {
+  box-shadow: 0 0 1px white;
+}
+
+input:checked + .slider2:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+       background-image: url(../img/wearIcon/FIcon.png); 
+    background-size: cover;
+    background-repeat: no-repeat 
+}
+
+/* Rounded sliders */
+.slider2.round2 {
+  border-radius: 34px;
+}
+
+.slider2.round2:before {
+  border-radius: 50%;
+}
+
+
+.forecast_buts{
+     position: absolute;
+    width: 80%;
+    height: 10%;
+   background-color: #3b455f;
+    top:0;
+    right: 0;
+    margin: auto;
+    left: 0;
+}
+
+.forecast1{
+            font-family: MontserratRegular;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast1:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast2{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 21.25%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast2:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast3{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 42.5%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast3:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast4{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 63.75%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast4:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast5{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 85%;
+            margin: auto;
+            width: 15%;
+            height: 100%;
+            background-color: #3b455f;
+            color: #ebebeb;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+.forecast5:hover {
+            background-color: #ebebeb;
+            color: black;
+        }
+
+.forecast1_clicked{
+       
+            font-family: MontserratRegular;
+            position: absolute;
+            left: 0px;
+            top: 0px;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+              
+        }
+
+.forecast2_clicked{
+       
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 21.25%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+              
+        }
+
+.forecast3_clicked{
+       
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 42.5%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+              
+        }
+
+.forecast4_clicked{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 63.75%;
+            margin: auto;
+            height: 100%;
+            width: 15%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+
+.forecast5_clicked{
+            font-family: MontserratRegular;
+            position: absolute;
+            top: 0px;
+            left: 85%;
+            margin: auto;
+            width: 15%;
+            height: 100%;
+            background-color: #ebebeb;
+            color: black;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            text-align: center;
+            z-index: 2;
+        }
+
+/*  Dropdown menu style     */
+
+@charset "UTF-8";
+.custom-select {
+  position: relative;
+  display: block;
+  max-width: 400px;
+  min-width: 180px;
+  margin: 0 auto;
+  border: 2px solid #3b455f;
+  background-color:#ebebeb;
+  z-index: 10;
+  margin-top:2%;
+}
+.custom-select select {
+  border: none;
+  outline: none;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  margin: 0;
+  display: block;
+  width: 100%;
+  padding: 12px 55px 15px 15px;
+  font-size: 14px;
+  color: #3b455f;
+}
+.custom-select:after {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 50px;
+  height: 100%;
+  line-height: 38px;
+  content: "∨";
+  text-align: center;
+  color: black;
+  font-size: 24px;
+  border-left: 2px solid #3b455f;
+  z-index: -1;
+}
 
 
