--- a/main/css/style.css
+++ b/main/css/style.css
@@ -332,16 +332,16 @@ button:focus {
             left: 0;
             background-color: rgba(240,240,240, 0.9);
             width: 100%;
-            height: 230%;
+            height: 2180px;
             font-family: MontserratRegular;
 }
 #about_subtitle {
   text-align: center; 
     font-size: 45pt;
     font-family: MontserratRegular;
-    margin-top: 100px;
-    bottom: 20%;
     
+  
+    bottom:15%;
     width: 980px;
     height: 100px;
     position: absolute;
@@ -441,6 +441,8 @@ position: absolute;
              position: absolute;
             top: 0;
             left: 0;
+            background-size: cover;
+            background-repeat: no-repeat;
             background-image: url(https://www.publicdomainpictures.net/pictures/20000/velka/sad-man-and-rain-1330349202VkV.jpg);
             width: 100%;
             height: 100%;
@@ -459,7 +461,7 @@ position: absolute;
           padding-top: 35px;
           padding-bottom: 20px;
           width: 97%;
-          height: 88%;
+          height: 500px;
           margin-top: 10px;
         margin-bottom: 10px;
           -moz-border-radius: 7px;
