--- a/main/css/style.css
+++ b/main/css/style.css
@@ -305,8 +305,8 @@ button:focus {
          }
 /* ---------------- aboutPage ------------------  */
 #about-div {
-          position: absolute;
-            top: 0;
+            position: absolute;
+            
             left: 0;
             background-size: cover;
             background-repeat: no-repeat;
@@ -327,21 +327,23 @@ button:focus {
 }
 
 #inner_header{
-    position: absolute;
+            position: absolute;
             top: 55%;
+            margin-top: 10%;
             left: 0;
+            margin:auto;
             background-color: rgba(240,240,240, 0.9);
-            width: 100%;
-            height: 2180px;
+            width: 980px;
+            height: 1980px;
             font-family: MontserratRegular;
 }
 #about_subtitle {
   text-align: center; 
     font-size: 45pt;
     font-family: MontserratRegular;
+    margin-top: 100px;
+    bottom: 8%;
     
-  
-    bottom:15%;
     width: 980px;
     height: 100px;
     position: absolute;
@@ -393,7 +395,7 @@ button:focus {
             position: absolute;
             right: 0px;
             left: 0px;
-            top: 93.7%;
+            bottom: -5%;
             margin:auto;
             width: 20%;
             height: 3%;
@@ -411,14 +413,14 @@ button:focus {
 
 #footer3{
 position: absolute;
-            top: 97%;
+            top: 110%;
             background-color:#2c2c4b;
             width: 100%;
             height: 10%;
 }
 #footerDiv{
     position: absolute; 
-    top: 83%;
+    top: 90%;
      background-image: url(http://maxpixel.freegreatpicture.com/static/photo/1x/Raining-Window-Glass-Saigon-Vietnam-Drops-Rain-1447723.jpg);
     background-color: white; 
     background-size: cover; 
@@ -429,8 +431,10 @@ position: absolute;
 }
 #footerDivText{
     position: absolute; 
-    height: 49%;
-    width: 900F;
+    height: 30%;
+    width: 880px;
+    top:-10%;
+    bottom: 100%;
     background-color: rgba(230, 230, 230, 1);
     margin-top: 20px; 
     padding: 50px;
@@ -441,14 +445,14 @@ position: absolute;
              position: absolute;
             top: 0;
             left: 0;
-            background-size: cover;
-            background-repeat: no-repeat;
             background-image: url(https://www.publicdomainpictures.net/pictures/20000/velka/sad-man-and-rain-1330349202VkV.jpg);
             width: 100%;
             height: 100%;
             overflow: auto;
             display: block;
             animation: fade 1s;
+            background-repeat: no-repeat;
+            background-size: cover;
     
         }
 .trans-div {
@@ -456,14 +460,10 @@ position: absolute;
           text-align: left;
           font-size: 20pt; 
           background-color: rgba(210, 210, 210, 0.7);
-          padding-left: 15px;
-          padding-right: 15px;
-          padding-top: 35px;
-          padding-bottom: 20px;
-          width: 97%;
+          width: 980px;
           height: 500px;
           margin-top: 10px;
-        margin-bottom: 10px;
+          margin-bottom: 10px;
           -moz-border-radius: 7px;
           -webkit-border-radius: 7px;
             font-family: MyriadPro;
@@ -2327,5 +2327,7 @@ input:checked + .slider2:before {
   border-left: 2px solid #3b455f;
   z-index: -1;
 }
+
+/*  Check Weather  */
 
 
