--- a/main/css/style.css
+++ b/main/css/style.css
@@ -143,6 +143,29 @@ button:focus {
             text-align: center;
             font-family: MyriadPro; 
         }
+.searchBut2 {
+            position: absolute;
+            right: 0;
+            left:0;
+            margin: auto;
+            bottom: 0;
+            top:0;
+             width: 20%;
+            height: 100%;
+            background-color: #719eb3;
+            color: #fff;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            text-align: center;
+            font-family: MyriadPro; 
+            display: none;
+        }
+ .searchBut2:hover {
+            background-color: #e0f4ec;
+            color: black;
+        }
 
         .searchBut:hover {
             background-color: #e0f4ec;
@@ -1159,7 +1182,8 @@ input:checked + .slider:before {
              left:0;
            right: 0;
            margin: auto;
-           background-image: url(http://www.oasisamor.org/wp-content/uploads/2017/05/rain-coat-dog-1.jpg);
+           background-color: #ebebeb;
+           background-image: url();
             background-size: cover;
             background-repeat: no-repeat;
         }
@@ -1273,7 +1297,9 @@ input:checked + .slider:before {
            background-color: #3b455f;
             color: #ebebeb;
         }
-  /* ---------------- header4 --------------------  */             .header4{ 
+  /* ---------------- header4 --------------------  */             
+
+.header4{ 
         
             position: absolute;
             top: 61%;
@@ -1281,7 +1307,7 @@ input:checked + .slider:before {
             background-color: white;
             width: 100%;
             height: 8%;
-     background-image: url(https://www.bcit.ca/files/international/img/int_whybcit.jpg);
+     background-image: url(../img/backgrounds/Bg1.jpeg);
      background-size: cover;
      background-repeat: no-repeat;
         }    
@@ -1355,7 +1381,8 @@ input:checked + .slider:before {
              left:0;
            right: 0;
            margin: auto;
-           background-image: url(https://safetyalliancebc.ca/wp-content/uploads/BCIT28.jpg);
+            background-color:#ebebeb; 
+           background-image: url();
             background-size: cover;
             background-repeat: no-repeat;
         }
